--- a/index2.html
+++ b/index2.html
@@ -1,5 +1,7 @@
 <html>
-    <link rel="style sheet"href="style2.css"/>
+    <head>
+    <link rel="stylesheet"href="style2.css"/>
+    </head>
     <body>
     <header>
         <img src="https://kino-scala.com.ua/images/logo.png"/>
