--- a/index3.html
+++ b/index3.html
@@ -1,5 +1,7 @@
 <html>
-    <link rel="style sheet"href="style3.css"/>
+    <head>
+    <link rel="stylesheet"href="style3.css"/>
+    </head>
     <body>
         <header>
              <img src="https://kino-scala.com.ua/images/logo.png"/>
